feat(wave-local-doable-6-bucket-h): GAP-840 close 2 sister email idempotency paths (kiteclass-core ClassRescheduled + kitehub-email HTTP)
Closes GAP-840 (PARTIAL 33% → DONE 100%) by shipping the 2 deferred sister
send paths that GAP-580 Wave local-doable-5 Bucket B (Redis SETNX) left out.

## Path 1 — kiteclass-core ClassRescheduledEmailConsumer dedup (sister consumer)

`class.rescheduled.queue` listener forwards `ClassRescheduledEvent` to
`class.rescheduled.email.queue` (consumed downstream by kitehub-email). Same
bug class as GAP-580: at-least-once inbound redelivery → duplicate forward →
duplicate email. Added independent `EmailIdempotencyGuard` copy in
`com.kiteclass.core.common.idempotency` (distinct Redis key namespace
`class-reschedule:idempotency:<sha256>` to avoid collision with kitehub-email's
`email:idempotency:*`). Consumer computes key from classId + rescheduledAt +
sorted recipient set and gates `convertAndSend` behind `markIfFirstSeen`.

- New `EmailIdempotencyGuard` (kiteclass-core, mirrors kitehub-email pattern)
- `ClassRescheduledEmailConsumer` wired with guard + recipient-list helper
- Caffeine + spring-boot-starter-data-redis already in pom; added Caffeine
  declaration + Testcontainers core for IT
- Tests: 6/6 unit (incl. dedup + distinct-events + order-insensitive list) +
  3/3 Testcontainers Redis 7 IT (cross-restart proof for the new copy)

## Path 2 — kitehub-email EmailController Idempotency-Key (HTTP)

`POST /api/platform/emails/send` accepts optional `Idempotency-Key` HTTP
header (Stripe / MoMo / VietQR pattern). Absent → content-derived hash
(to + template + variables) so caller-timeout retries still collide. Reuses
existing `EmailIdempotencyGuard` with `http:` namespace prefix +
ConcurrentHashMap response cache so duplicate POSTs return the SAME
messageId/status (Stripe Idempotency contract).

- Tests: 5/5 (3 baseline + Idempotency-Key dedup + content-derived dedup)
- Full kitehub-email suite: 100/100 (no regression on GAP-580 IT)

## L